# bank-webhook-processor

./: .gitignore  README.md  pyproject.toml
backend/config/: routers.py  settings.py  urls.py
backend/payments/: models.py  serializers.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/tests/payments/: test_api.py
