[project]
name = "bank-webhook-processor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "mysqlclient>=2.2.7",
    "pytest-django>=4.11.1",
    "ruff>=0.11.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
django_find_project = true
pythonpath = "."
